<resources>
    <string name="app_name">dodo v3</string>
    <string name="pressure_high">Pressure: High</string>
    <string name="temperature_normal">Temperature: Normal</string>
    <string name="next">Next</string>
    <string name="connect_device">Connect Device\n</string>
    <string name="step_1_turn_on_your_insoles">Step1: Turn oon your Insoles</string>
    <string name="press_and_hold_the_button_for_3_seconds_until_the_light_turns_blue">Press and hold the button for 3 seconds until the light turns blue</string>
    <string name="step_2_pair_with_your_phone">Step 2: Pair with your phone\n</string>
    <string name="open_your_phone_s_bluetooth_settings">Open your phone\'s bluetooth settings\n</string>
    <string name="start_pairing">Start Pairing\n</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="share_data">Share data</string>
    <string name="account_management">Account Management</string>
    <string name="help">Help</string>
    <string name="log_out">Logout</string>
</resources>